--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
     </a>
   </div>
 
-  <div class="ui bottom attached segment pushable">
+  <div class="ui bottom attached segment pushable" style="overflow: auto;height: calc(100% - 45px);">
     <div class="ui inverted labeled icon left inline vertical sidebar menu">
       <a class="home item">
         <i class="home icon"></i>
@@ -52,16 +52,16 @@
       </a>
     </div>
 
-    <div class="pusher">
+    <div class="pusher" style="overflow: auto;height: calc(100% - 45px);">
 
       <div class="ui basic segment home" style="margin-top: 14px;">
-        <!-- <img class="ui fluid image" src="/client/img/tutoringbackground.jpg"> -->
+        <!--<img class="ui fluid image" src="/client/img/tutoringbackground.jpg">-->
         <h1 class="ui header" style="text-align: center; font-size: 40px">Tremendous Tutors</h1>
 
         <div class="ui piled segment home">
           <h4 class="ui header">Mission Statement</h4>
           <p>Tremendous Tutors is dedicated to providing free, need-based academic assistance to students in middle and
-            high school in all subjects. Tremendous Tutors prioritizes low-income students but is available all
+            high school in all subjects. Tremendous Tutors prioritizes low-income students but is available to all
             students.</p>
         </div>
         <div class="ui center aligned container">
@@ -121,7 +121,7 @@
         <div class="ui raised segment faq">
           <div class="ui medium header">Are the tutors paid or volunteers?</div>
           <p>
-            All tutors are high school volunteers, but theyall meet the rigorous standards Tremendous Tutors sets in
+            All tutors are high school volunteers, but they all meet the rigorous standards Tremendous Tutors sets in
             terms of academics and teaching experience.
           </p>
         </div>
@@ -143,6 +143,38 @@
             try our best to accomodate you.
           </p>
         </div>
+        <div class="ui raised segment faq">
+          <div class="ui medium header">Are the tutoring sessions a one-time thing or recurring?</div>
+          <p>
+            They can be either! When you sign up, you can select whether you want to sign up for one session,
+            recurring
+            sessions, or if you are unsure!
+          </p>
+        </div>
+        <div class="ui raised segment faq">
+          <div class="ui medium header">Are the tutoring sessions a one-time thing or recurring?</div>
+          <p>
+            They can be either! When you sign up, you can select whether you want to sign up for one session,
+            recurring
+            sessions, or if you are unsure!
+          </p>
+        </div>
+        <div class="ui raised segment faq">
+          <div class="ui medium header">Are the tutoring sessions a one-time thing or recurring?</div>
+          <p>
+            They can be either! When you sign up, you can select whether you want to sign up for one session,
+            recurring
+            sessions, or if you are unsure!
+          </p>
+        </div>
+        <div class="ui raised segment faq">
+          <div class="ui medium header">Are the tutoring sessions a one-time thing or recurring?</div>
+          <p>
+            They can be either! When you sign up, you can select whether you want to sign up for one session,
+            recurring
+            sessions, or if you are unsure!
+          </p>
+        </div>
       </div>
 
       <div class="ui basic segment schedule">
@@ -162,21 +194,22 @@
               <img src="/client/img/fillerperson1.jpg">
             </div>
             <div class="content">
-              <div class="header">Matt Giampietro</div>
+              <div class="header">Name</div>
               <div class="meta">
-                <a>Friends</a>
+                <a>Subtitle</a>
               </div>
               <div class="description">
-                Matthew is an interior designer living in New York.
+                Description
               </div>
             </div>
             <div class="extra content">
-              <span class="right floated">
-                Joined in 2013
-              </span>
               <span>
-                <i class="user icon"></i>
-                75 Friends
+                <i class="book icon"></i>
+                Favorite Subject
+              </span>
+              <br>
+              <span class="right floated">
+                <!--Joined in March, 2021-->
               </span>
             </div>
           </div>
@@ -185,21 +218,22 @@
               <img src="/client/img/fillerperson2.jpg">
             </div>
             <div class="content">
-              <div class="header">Molly</div>
+              <div class="header">Name</div>
               <div class="meta">
-                <span class="date">Coworker</span>
+                <a>Subtitle</a>
               </div>
               <div class="description">
-                Molly is a personal assistant living in Paris.
+                Description
               </div>
             </div>
             <div class="extra content">
-              <span class="right floated">
-                Joined in 2011
-              </span>
               <span>
-                <i class="user icon"></i>
-                35 Friends
+                <i class="book icon"></i>
+                Favorite Subject
+              </span>
+              <br>
+              <span class="right floated">
+                <!--Joined in March, 2021-->
               </span>
             </div>
           </div>
@@ -208,21 +242,22 @@
               <img src="/client/img/fillerperson3.jpg">
             </div>
             <div class="content">
-              <div class="header">Elyse</div>
+              <div class="header">Name</div>
               <div class="meta">
-                <a>Coworker</a>
+                <a>Subtitle</a>
               </div>
               <div class="description">
-                Elyse is a copywriter working in New York.
+                Description
               </div>
             </div>
             <div class="extra content">
-              <span class="right floated">
-                Joined in 2014
-              </span>
               <span>
-                <i class="user icon"></i>
-                151 Friends
+                <i class="book icon"></i>
+                Favorite Subject
+              </span>
+              <br>
+              <span class="right floated">
+                <!--Joined in March, 2021-->
               </span>
             </div>
           </div>
