new grid layout

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,232 @@
 </head>
 
 <body>
-  <div class="ui top attached menu">
+  <div id="top" class="ui grid">
+    <div class="three wide column">
+      <div class="ui sticky vertical fluid tabular menu">
+        <a class="item active">
+          Bio
+        </a>
+        <a class="item">
+          Pics
+        </a>
+        <a class="item">
+          Companies
+        </a>
+        <a class="item">
+          Links
+        </a>
+      </div>
+    </div>
+    <div class="ten wide stretched column">
+        <div>
+          <div class="ui sticky blue inverted raised segment footer">
+            <p style="text-align: center; font-size: 20px;">
+              Tremendous Tutors
+            </p>
+          </div>
+        </div>
+        <div class="title-img" style="width: 100%; height: 480px">
+
+          <div class="ui grid">
+            <div class="one wide column"></div>
+            <div class="seven wide column" style="margin: 0px; padding: 0px; padding-top: 200px; padding-left: 10px">
+              <div class="ui raised segment home" style="height: 250px">
+                <h4 class="ui center aligned header">What is Tremendous Tutors?</h4>
+                <p style="text-align: center;">Tremendous Tutors, based in Westborough, MA, was created by high
+                  schoolers dedicated to bettering the
+                  global community by improving education access and quality for urban and underprivileged youth.
+                  Tremendous
+                  Tutors provides free, one-hour sessions with straight-A high school tutors on a one-time or recurring
+                  basis.
+                  Students can select what subject(s) they need assistance with, and we will match them to a tutor who
+                  can
+                  help them with that/those subject(s).
+                </p>
+              </div>
+            </div>
+            <div class="seven wide column" style="margin: 0px; padding: 0px; padding-top: 200px; padding-right: 10px">
+              <div class="ui raised segment home" style="height: 250px">
+                <h4 class="ui center aligned header">Mission Statement</h4>
+                <p style="text-align: center;">Tremendous Tutors is committed to providing free tutoring sessions to
+                  augment students’ in-class learning
+                  via one-on-one assistance from another student. Our organization is revolutionizing the academic
+                  experiences
+                  of students who are otherwise disenfranchised. Tutors prioritizes low-income and urban students but
+                  accepts
+                  all students.
+                </p>
+              </div>
+            </div>
+            <div class="one wide column"></div>
+          </div>
+        </div>
+
+        <div class="ui brown inverted raised segment">
+          <h2 class="ui header">How It Works</h2>
+          <div class="ui vertical steps">
+            <div class="active step">
+              <i class="info icon"></i>
+              <div class="content">
+                <div class="title">Fill out the Form</div>
+                <div class="description">Fill out this <a
+                    href="https://docs.google.com/forms/d/e/1FAIpQLSfFt5TtWUA3MwQqi1e1NHebvn5t5yGzVGd0Dl5EoFqipJLSog/viewform?gxids=7628"
+                    target="_blank" rel="noopener noreferrer">Google
+                    Form</a> with a little information about you and your tutoring needs.</div>
+              </div>
+            </div>
+            <div class="active step">
+              <i class="info icon"></i>
+              <div class="content">
+                <div class="title">Look for an Email</div>
+                <div class="description">Be on the lookout for an email from your tutor to schedule your session!</div>
+              </div>
+            </div>
+            <div class="active step">
+              <i class="info icon"></i>
+              <div class="content">
+                <div class="title">Join the Zoom</div>
+                <div class="description">Join the zoom session! It's that easy!!</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="ui center aligned container">
+          <div class="ui statistic">
+            <div class="value">
+              666
+            </div>
+
+            <div class="label">
+              Sessions
+            </div>
+          </div>
+          <div class="ui statistic">
+            <div class="value">
+              420
+            </div>
+
+            <div class="label">
+              Hours
+            </div>
+
+          </div>
+          <div class="ui statistic">
+            <div class="value">
+              69
+            </div>
+
+            <div class="label">
+              Tutors
+            </div>
+          </div>
+        </div>
+      
+
+
+    </div>
+    <div class="three wide stretched column">
+      <div style="height: 100%;">
+        <div class="ui sticky feed">
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="ui center aligned inverted raised segment footer">
+    <p>Email: tremendoustutors1@gmail.com</p>
+    <p>Phone Number: 508-988-0528</p>
+    <p>Copyright © 2021 Tremendous Tutors</p>
+  </div>
+  <!--remove whitespace-->
+  <div class="ui blue inverted raised segment footer">
+    <p style="text-align: center; font-size: 20px;">
+      An organization of the students, by the students, for the students!
+    </p>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!--<div class="ui top attached menu">
     <a class="item">
       <i class="sidebar icon"></i>
       Navigation
@@ -129,7 +354,7 @@
       </div>
 
       <div class="ui basic segment faq">
-        <div class="title-img" style="height: 480px">
+        <div class="faq-img" style="width: 100%; height: 480px">
           <h1 class="ui header" style="text-align: center; font-size: 40px">FAQs</h1>
         </div>
         <div class="ui raised segment faq">
@@ -175,7 +400,7 @@
       </div>
 
       <div class="ui basic segment schedule">
-        <div class="title-img" style="height: 480px">
+        <div class="schedule-img" style="width: 100%; height: 480px">
           <h1 class="ui header" style="text-align: center; font-size: 40px">Schedule</h1>
         </div>
         <div class="ui raised segment schedule">
@@ -211,7 +436,7 @@
               </span>
               <br>
               <span class="right floated">
-                <!--Joined in March, 2021-->
+                Joined in March, 2021
               </span>
             </div>
           </div>
@@ -235,7 +460,7 @@
               </span>
               <br>
               <span class="right floated">
-                <!--Joined in March, 2021-->
+                Joined in March, 2021
               </span>
             </div>
           </div>
@@ -259,7 +484,7 @@
               </span>
               <br>
               <span class="right floated">
-                <!--Joined in March, 2021-->
+                Joined in March, 2021
               </span>
             </div>
           </div>
@@ -272,7 +497,7 @@
       </div>
     </div>
     
-  </div>
+  </div>-->
 
 </body>
 
