--- a/client/index.html
+++ b/client/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tremendous Tutors</title>
-    <link rel="stylesheet" href="/client/css/index.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-    <script src="/client/js/index.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Tremendous Tutors</title>
+  <link rel="stylesheet" href="/client/css/index.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+  <script src="/client/js/index.js"></script>
+</head>
 
-  <body>
+<body>
+  <div class="stickToTop">
+    <img class="ui fluid image" src="/client/img/tremendoustutorstitle.jpg">
+  </div>
 
+  <div class="ui main body">
     <div class="ui grid">
-      <div class="three wide column" style="background-image: url('/client/img/navbackground.png');">
+
+      <div class="three wide stretched column" style="background-image: url('/client/img/navbackground.png');">
         <div class="ui vertical fluid tabular menu">
           <a class="item home active">
             Home
@@ -32,17 +37,11 @@
         </div>
       </div>
 
-      <div class="ten wide stretched column">
-
-        <div class="ui sticky inverted raised segment" style="background-color: #59A5D8;">
-          <p style="text-align: center; font-size: 20px;">
-            Tremendous Tutors
-          </p>
-        </div>
+      <div class="ten wide stretched column" style="margin-top: 0px; margin-bottom: 0px; padding: 0px">
 
         <div class="content home">
 
-          <div class="home-img">
+          <div class="home-img" style="height: 480px;">
             <div class="ui grid">
               <div class="one wide stretched column"></div>
               <div class="seven wide stretched column" style="padding:170px 0px 40px 10px">
@@ -67,7 +66,7 @@
                     augment students’ in-class learning
                     via one-on-one assistance from another student. Our organization is revolutionizing the academic
                     experiences
-                    of students who are otherwise disenfranchised. Tutors prioritizes low-income and urban students but
+                    of students who are otherwise disenfranchised. Tremendous Tutors prioritizes low-income and urban students but
                     accepts
                     all students.
                   </p>
@@ -77,10 +76,10 @@
             </div>
           </div>
 
-          <div class="ui inverted raised segment" style="background-color: #4B4E6D;">
+          <div class="ui inverted basic segment center aligned" style="background-color: #4B4E6D; margin-top: 0px; margin-bottom: 0px;">
             <h2 class="ui header">How It Works</h2>
             <div class="ui vertical steps">
-              <div class="active step">
+              <div class="step" style="text-align: left;">
                 <i class="clipboard icon"></i>
                 <div class="content">
                   <div class="title">Fill out the Form</div>
@@ -90,24 +89,24 @@
                       Form</a> with a little information about you and your tutoring needs.</div>
                 </div>
               </div>
-              <div class="active step">
+              <div class="step" style="text-align: left;">
                 <i class="envelope icon"></i>
                 <div class="content">
                   <div class="title">Look for an Email</div>
                   <div class="description">Be on the lookout for an email from your tutor to schedule your session!</div>
                 </div>
               </div>
-              <div class="active step">
+              <div class="step" style="text-align: left;">
                 <i class="video icon"></i>
                 <div class="content">
                   <div class="title">Join the Zoom</div>
-                  <div class="description">Join the zoom session! It's that easy!!</div>
+                  <div class="description">Join the zoom session via the link emailed to you by your tutor! It's that easy!!</div>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="ui inverted center aligned segment" style="background-color: #59A5D8;">
+          <div class="ui inverted center aligned basic segment" style="background-color: #59A5D8; margin-top: 0px; margin-bottom: 0px; ">
             <div class="ui inverted statistic">
               <div class="value">
                 666
@@ -142,7 +141,7 @@
 
         <div class="content faq hide">
 
-          <div class="faq-img" style="width: 100%; height: 480px;">
+          <div class="faq-img" style="height: 480px;">
             <h1 class="ui header" style="text-align: center; font-size: 40px;">FAQs</h1>
           </div>
 
@@ -391,8 +390,7 @@
       </div>
 
       <div class="three wide stretched column" style="background-color: #6A8D92;">
-
-        <div style="height: 100%">
+       
           <div class="ui feed">
 
             <div class="event">
@@ -408,7 +406,6 @@
                 </div>
               </div>
             </div>
-
             <div class="event">
               <div class="label">
                 <img src="/client/img/faqbackground.jpg">
@@ -422,7 +419,6 @@
                 </div>
               </div>
             </div>
-
             <div class="event">
               <div class="label">
                 <img src="/client/img/faqbackground.jpg">
@@ -436,7 +432,7 @@
                 </div>
               </div>
             </div>
-
+  
             <div class="event">
               <div class="label">
                 <img src="/client/img/faqbackground.jpg">
@@ -450,7 +446,7 @@
                 </div>
               </div>
             </div>
-
+  
             <div class="event">
               <div class="label">
                 <img src="/client/img/faqbackground.jpg">
@@ -464,26 +460,94 @@
                 </div>
               </div>
             </div>
-
+  
+            <div class="event">
+              <div class="label">
+                <img src="/client/img/faqbackground.jpg">
+              </div>
+              <div class="content">
+                <div class="date">
+                  3 days ago
+                </div>
+                <div class="summary">
+                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+                </div>
+              </div>
+            </div>
+  
+            <div class="event">
+              <div class="label">
+                <img src="/client/img/faqbackground.jpg">
+              </div>
+              <div class="content">
+                <div class="date">
+                  3 days ago
+                </div>
+                <div class="summary">
+                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+                </div>
+              </div>
+            </div>
+            <div class="event">
+              <div class="label">
+                <img src="/client/img/faqbackground.jpg">
+              </div>
+              <div class="content">
+                <div class="date">
+                  3 days ago
+                </div>
+                <div class="summary">
+                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+                </div>
+              </div>
+            </div>
+  
+            <div class="event">
+              <div class="label">
+                <img src="/client/img/faqbackground.jpg">
+              </div>
+              <div class="content">
+                <div class="date">
+                  3 days ago
+                </div>
+                <div class="summary">
+                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+                </div>
+              </div>
+            </div>
+  
+            <div class="event">
+              <div class="label">
+                <img src="/client/img/faqbackground.jpg">
+              </div>
+              <div class="content">
+                <div class="date">
+                  3 days ago
+                </div>
+                <div class="summary">
+                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+                </div>
+              </div>
+            </div>
+  
           </div>
-        </div>
-
+        
       </div>
 
     </div>
 
-    <div class="ui center aligned inverted raised segment footer" style="margin-bottom: 0px;">
+    <div class="ui center aligned inverted basic segment footer" style="margin-bottom: 0px;">
       <p>Email: tremendoustutors1@gmail.com</p>
       <p>Phone Number: 508-988-0528</p>
       <p>Copyright © 2021 Tremendous Tutors</p>
     </div>
 
-    <div class="ui inverted raised segment footer" style="background-color: #493548; margin-top:0px">
+    <div class="ui inverted basic segment footer" style="background-color: #493548; margin-top:0px">
       <p style="text-align: center; font-size: 20px;">
         An organization of the students, by the students, for the students!
       </p>
     </div>
-
-  </body>
+  </div>
+</body>
 
 </html>
