--- a/client/index.html
+++ b/client/index.html
@@ -21,10 +21,10 @@
   </div>
 
   <div class="ui main body">
-    <div class="ui grid">
+    <div class="ui stackable grid" style="background-color: #6A8D92;">
 
-      <div class="three wide stretched column" style="background-image: url('/client/img/navbackground.png');">
-        <div class="ui vertical fluid tabular menu">
+      <div class="three wide stretched column" style="padding-right: 0px; padding-bottom: 0px;">
+        <div class="ui inverted grey fluid vertical menu">
           <a class="item home active">
             Home
           </a>
@@ -37,11 +37,11 @@
         </div>
       </div>
 
-      <div class="ten wide stretched column" style="margin-top: 0px; margin-bottom: 0px; padding: 0px">
+      <div class="ten wide stretched column" style="margin-top: 0px; margin-bottom: 0px; padding: 0px; background-color: white;">
 
         <div class="content home">
 
-          <div class="home-img" style="height: 480px;">
+          <div class="home-img">
             <div class="ui grid">
               <div class="one wide stretched column"></div>
               <div class="seven wide stretched column" style="padding:170px 0px 40px 10px">
@@ -389,9 +389,9 @@
 
       </div>
 
-      <div class="three wide stretched column" style="background-color: #6A8D92;">
+      <div class="three wide stretched column" style="background-color: #6A8D92; padding-top: 0px; padding-bottom: 0px;">
        
-          <div class="ui feed">
+          <div class="ui feed" style="background-color: #6A8D92;">
 
             <div class="event">
               <div class="label">
