--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tremendous Tutors</title>
+  <link rel="icon" href="/client/img/favicon.png" sizes="16x16" type="image/png">
   <link rel="stylesheet" href="/client/css/index.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -17,14 +18,14 @@
 
 <body>
   <div class="stickToTop">
-    <img class="ui fluid image" src="/client/img/tremendoustutorstitle.jpg">
+    <img class="ui fluid image" src="/client/img/tremendoustutorstitle.png" style="height: 200px;">
   </div>
 
   <div class="ui main body">
     <div class="ui stackable grid" style="background-color: #6A8D92;">
 
-      <div class="three wide stretched column" style="padding-right: 0px; padding-bottom: 0px;">
-        <div class="ui inverted grey fluid vertical menu">
+      <div class="three wide stretched column leftSection" style="padding-right: 0px; padding-bottom: 0px;">
+        <div class="ui inverted blue fluid vertical menu">
           <a class="item home active">
             Home
           </a>
@@ -37,7 +38,8 @@
         </div>
       </div>
 
-      <div class="ten wide stretched column" style="margin-top: 0px; margin-bottom: 0px; padding: 0px; background-color: white;">
+      <div class="ten wide stretched column"
+        style="margin-top: 0px; margin-bottom: 0px; padding: 0px; background-color: white;">
 
         <div class="content home">
 
@@ -51,7 +53,8 @@
                     schoolers dedicated to bettering the
                     global community by improving education access and quality for urban and underprivileged youth.
                     Tremendous
-                    Tutors provides free, one-hour sessions with straight-A high school tutors on a one-time or recurring
+                    Tutors provides free, one-hour sessions with straight-A high school tutors on a one-time or
+                    recurring
                     basis.
                     Students can select what subject(s) they need assistance with, and we will match them to a tutor who
                     can
@@ -66,7 +69,8 @@
                     augment students’ in-class learning
                     via one-on-one assistance from another student. Our organization is revolutionizing the academic
                     experiences
-                    of students who are otherwise disenfranchised. Tremendous Tutors prioritizes low-income and urban students but
+                    of students who are otherwise disenfranchised. Tremendous Tutors prioritizes low-income and urban
+                    students but
                     accepts
                     all students.
                   </p>
@@ -76,7 +80,8 @@
             </div>
           </div>
 
-          <div class="ui inverted basic segment center aligned" style="background-color: #4B4E6D; margin-top: 0px; margin-bottom: 0px;">
+          <div class="ui inverted basic segment center aligned"
+            style="background-color: #4B4E6D; margin-top: 0px; margin-bottom: 0px;">
             <h2 class="ui header">How It Works</h2>
             <div class="ui vertical steps">
               <div class="step" style="text-align: left;">
@@ -93,20 +98,23 @@
                 <i class="envelope icon"></i>
                 <div class="content">
                   <div class="title">Look for an Email</div>
-                  <div class="description">Be on the lookout for an email from your tutor to schedule your session!</div>
+                  <div class="description">Be on the lookout for an email from your tutor to schedule your session!
+                  </div>
                 </div>
               </div>
               <div class="step" style="text-align: left;">
                 <i class="video icon"></i>
                 <div class="content">
                   <div class="title">Join the Zoom</div>
-                  <div class="description">Join the zoom session via the link emailed to you by your tutor! It's that easy!!</div>
+                  <div class="description">Join the zoom session via the link emailed to you by your tutor! It's that
+                    easy!!</div>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="ui inverted center aligned basic segment" style="background-color: #59A5D8; margin-top: 0px; margin-bottom: 0px; ">
+          <div class="ui inverted center aligned basic segment"
+            style="background-color: #59A5D8; margin-top: 0px; margin-bottom: 0px; ">
             <div class="ui inverted statistic">
               <div class="value">
                 666
@@ -389,149 +397,150 @@
 
       </div>
 
-      <div class="three wide stretched column" style="background-color: #6A8D92; padding-top: 0px; padding-bottom: 0px;">
-       
-          <div class="ui feed" style="background-color: #6A8D92;">
+      <div class="three wide stretched column"
+        style="margin-top: 1rem; background-color: #6A8D92; padding-top: 0px; padding-bottom: 0px;">
 
-            <div class="event">
-              <div class="label">
-                <img src="/client/img/faqbackground.jpg">
+        <div class="ui feed" style="background-color: #6A8D92;">
+
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
               </div>
-              <div class="content">
-                <div class="date">
-                  3 days ago
-                </div>
-                <div class="summary">
-                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-                </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
               </div>
             </div>
-            <div class="event">
-              <div class="label">
-                <img src="/client/img/faqbackground.jpg">
-              </div>
-              <div class="content">
-                <div class="date">
-                  3 days ago
-                </div>
-                <div class="summary">
-                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-                </div>
-              </div>
-            </div>
-            <div class="event">
-              <div class="label">
-                <img src="/client/img/faqbackground.jpg">
-              </div>
-              <div class="content">
-                <div class="date">
-                  3 days ago
-                </div>
-                <div class="summary">
-                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-                </div>
-              </div>
-            </div>
-  
-            <div class="event">
-              <div class="label">
-                <img src="/client/img/faqbackground.jpg">
-              </div>
-              <div class="content">
-                <div class="date">
-                  3 days ago
-                </div>
-                <div class="summary">
-                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-                </div>
-              </div>
-            </div>
-  
-            <div class="event">
-              <div class="label">
-                <img src="/client/img/faqbackground.jpg">
-              </div>
-              <div class="content">
-                <div class="date">
-                  3 days ago
-                </div>
-                <div class="summary">
-                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-                </div>
-              </div>
-            </div>
-  
-            <div class="event">
-              <div class="label">
-                <img src="/client/img/faqbackground.jpg">
-              </div>
-              <div class="content">
-                <div class="date">
-                  3 days ago
-                </div>
-                <div class="summary">
-                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-                </div>
-              </div>
-            </div>
-  
-            <div class="event">
-              <div class="label">
-                <img src="/client/img/faqbackground.jpg">
-              </div>
-              <div class="content">
-                <div class="date">
-                  3 days ago
-                </div>
-                <div class="summary">
-                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-                </div>
-              </div>
-            </div>
-            <div class="event">
-              <div class="label">
-                <img src="/client/img/faqbackground.jpg">
-              </div>
-              <div class="content">
-                <div class="date">
-                  3 days ago
-                </div>
-                <div class="summary">
-                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-                </div>
-              </div>
-            </div>
-  
-            <div class="event">
-              <div class="label">
-                <img src="/client/img/faqbackground.jpg">
-              </div>
-              <div class="content">
-                <div class="date">
-                  3 days ago
-                </div>
-                <div class="summary">
-                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-                </div>
-              </div>
-            </div>
-  
-            <div class="event">
-              <div class="label">
-                <img src="/client/img/faqbackground.jpg">
-              </div>
-              <div class="content">
-                <div class="date">
-                  3 days ago
-                </div>
-                <div class="summary">
-                  You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-                </div>
-              </div>
-            </div>
-  
           </div>
-        
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+
+          <div class="event">
+            <div class="label">
+              <img src="/client/img/faqbackground.jpg">
+            </div>
+            <div class="content">
+              <div class="date">
+                3 days ago
+              </div>
+              <div class="summary">
+                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+              </div>
+            </div>
+          </div>
+
+        </div>
+
       </div>
 
     </div>
