--- a/client/index.html
+++ b/client/index.html
@@ -116,7 +116,7 @@
           <div class="ui inverted center aligned basic segment"
             style="background-color: #59A5D8; margin-top: 0px; margin-bottom: 0px; ">
             <div class="ui inverted statistic">
-              <div class="value">
+              <div class="value" id="sessions">
                 666
               </div>
 
@@ -125,7 +125,7 @@
               </div>
             </div>
             <div class="ui inverted statistic">
-              <div class="value">
+              <div class="value" id="hours">
                 420
               </div>
 
@@ -135,7 +135,7 @@
 
             </div>
             <div class="ui inverted statistic">
-              <div class="value">
+              <div class="value" id="tutors">
                 69
               </div>
 
@@ -400,7 +400,7 @@
       <div class="three wide stretched column"
         style="margin-top: 1rem; background-color: #6A8D92; padding-top: 0px; padding-bottom: 0px;">
 
-        <div class="ui feed" style="background-color: #6A8D92;">
+        <div class="ui feed" id="feed" style="background-color: #6A8D92;">
 
           <div class="event">
             <div class="label">
@@ -415,130 +415,7 @@
               </div>
             </div>
           </div>
-          <div class="event">
-            <div class="label">
-              <img src="/client/img/faqbackground.jpg">
-            </div>
-            <div class="content">
-              <div class="date">
-                3 days ago
-              </div>
-              <div class="summary">
-                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="label">
-              <img src="/client/img/faqbackground.jpg">
-            </div>
-            <div class="content">
-              <div class="date">
-                3 days ago
-              </div>
-              <div class="summary">
-                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-              </div>
-            </div>
-          </div>
-
-          <div class="event">
-            <div class="label">
-              <img src="/client/img/faqbackground.jpg">
-            </div>
-            <div class="content">
-              <div class="date">
-                3 days ago
-              </div>
-              <div class="summary">
-                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-              </div>
-            </div>
-          </div>
-
-          <div class="event">
-            <div class="label">
-              <img src="/client/img/faqbackground.jpg">
-            </div>
-            <div class="content">
-              <div class="date">
-                3 days ago
-              </div>
-              <div class="summary">
-                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-              </div>
-            </div>
-          </div>
-
-          <div class="event">
-            <div class="label">
-              <img src="/client/img/faqbackground.jpg">
-            </div>
-            <div class="content">
-              <div class="date">
-                3 days ago
-              </div>
-              <div class="summary">
-                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-              </div>
-            </div>
-          </div>
-
-          <div class="event">
-            <div class="label">
-              <img src="/client/img/faqbackground.jpg">
-            </div>
-            <div class="content">
-              <div class="date">
-                3 days ago
-              </div>
-              <div class="summary">
-                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="label">
-              <img src="/client/img/faqbackground.jpg">
-            </div>
-            <div class="content">
-              <div class="date">
-                3 days ago
-              </div>
-              <div class="summary">
-                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-              </div>
-            </div>
-          </div>
-
-          <div class="event">
-            <div class="label">
-              <img src="/client/img/faqbackground.jpg">
-            </div>
-            <div class="content">
-              <div class="date">
-                3 days ago
-              </div>
-              <div class="summary">
-                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-              </div>
-            </div>
-          </div>
-
-          <div class="event">
-            <div class="label">
-              <img src="/client/img/faqbackground.jpg">
-            </div>
-            <div class="content">
-              <div class="date">
-                3 days ago
-              </div>
-              <div class="summary">
-                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
-              </div>
-            </div>
-          </div>
-
+          
         </div>
 
       </div>
