--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,16 @@
 
 <body>
   <div class="stickToTop">
-    <img class="ui fluid image" src="/client/img/tremendoustutorstitle.png" style="height: 200px;">
+    <div class="vertical-center" style="height: 100px;">
+      <h1 style="font-size: 60px;">
+        Tremendous
+      </h1>
+    </div>
+    <div class="vertical-center" style="height: 100px; color: ;">
+      <h1 style="font-size: 60px;">
+        Tutors
+      </h1>
+    </div>
   </div>
 
   <div class="ui main body">
