--- a/client/index.html
+++ b/client/index.html
@@ -214,190 +214,7 @@
             <h1 class="ui header" style="text-align: center; font-size: 40px">Meet the Tutors</h1>
           </div>
 
-          <div class="ui three stackable cards">
-
-            <div class="card">
-              <div class="image">
-                <img src="/client/img/fillerperson1.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Name</div>
-                <div class="meta">
-                  <a>Subtitle</a>
-                </div>
-                <div class="description">
-                  Description
-                </div>
-              </div>
-              <div class="extra content">
-                <span>
-                  <i class="book icon"></i>
-                  Favorite Subject
-                </span>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="/client/img/fillerperson2.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Name</div>
-                <div class="meta">
-                  <a>Subtitle</a>
-                </div>
-                <div class="description">
-                  Description
-                </div>
-              </div>
-              <div class="extra content">
-                <span>
-                  <i class="book icon"></i>
-                  Favorite Subject
-                </span>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="/client/img/fillerperson3.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Name</div>
-                <div class="meta">
-                  <a>Subtitle</a>
-                </div>
-                <div class="description">
-                  Description
-                </div>
-              </div>
-              <div class="extra content">
-                <span>
-                  <i class="book icon"></i>
-                  Favorite Subject
-                </span>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="image">
-                <img src="/client/img/fillerperson1.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Name</div>
-                <div class="meta">
-                  <a>Subtitle</a>
-                </div>
-                <div class="description">
-                  Description
-                </div>
-              </div>
-              <div class="extra content">
-                <span>
-                  <i class="book icon"></i>
-                  Favorite Subject
-                </span>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="/client/img/fillerperson2.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Name</div>
-                <div class="meta">
-                  <a>Subtitle</a>
-                </div>
-                <div class="description">
-                  Description
-                </div>
-              </div>
-              <div class="extra content">
-                <span>
-                  <i class="book icon"></i>
-                  Favorite Subject
-                </span>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="/client/img/fillerperson3.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Name</div>
-                <div class="meta">
-                  <a>Subtitle</a>
-                </div>
-                <div class="description">
-                  Description
-                </div>
-              </div>
-              <div class="extra content">
-                <span>
-                  <i class="book icon"></i>
-                  Favorite Subject
-                </span>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="image">
-                <img src="/client/img/fillerperson1.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Name</div>
-                <div class="meta">
-                  <a>Subtitle</a>
-                </div>
-                <div class="description">
-                  Description
-                </div>
-              </div>
-              <div class="extra content">
-                <span>
-                  <i class="book icon"></i>
-                  Favorite Subject
-                </span>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="/client/img/fillerperson2.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Name</div>
-                <div class="meta">
-                  <a>Subtitle</a>
-                </div>
-                <div class="description">
-                  Description
-                </div>
-              </div>
-              <div class="extra content">
-                <span>
-                  <i class="book icon"></i>
-                  Favorite Subject
-                </span>
-              </div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="/client/img/fillerperson3.jpg">
-              </div>
-              <div class="content">
-                <div class="header">Name</div>
-                <div class="meta">
-                  <a>Subtitle</a>
-                </div>
-                <div class="description">
-                  Description
-                </div>
-              </div>
-              <div class="extra content">
-                <span>
-                  <i class="book icon"></i>
-                  Favorite Subject
-                </span>
-              </div>
-            </div>
+          <div class="ui three stackable cards" id="tutorCards">
 
           </div>
 
