i think were finally done. hopefully.

--- a/client/admin.html
+++ b/client/admin.html
@@ -21,5 +21,9 @@
       <label>Tutors</label><textarea id="tutorCards" name="tutorCards" rows="20" cols="100"></textarea> <br>
       <input type="button" id="tutors-submit" value="Submit">
     </form>
+    <form>
+      <label>FAQs</label><textarea id="faqs" name="faqs" rows="20" cols="100"></textarea> <br>
+      <input type="button" id="faqs-submit" value="Submit">
+    </form>
   </body>
 </html>
