--- a/client/index.html
+++ b/client/index.html
@@ -126,7 +126,7 @@
             style="background-color: #59A5D8; margin-top: 0px; margin-bottom: 0px; ">
             <div class="ui inverted statistic">
               <div class="value" id="sessions">
-                666
+                err
               </div>
 
               <div class="label">
@@ -135,7 +135,7 @@
             </div>
             <div class="ui inverted statistic">
               <div class="value" id="hours">
-                420
+                err
               </div>
 
               <div class="label">
@@ -145,7 +145,7 @@
             </div>
             <div class="ui inverted statistic">
               <div class="value" id="tutors">
-                69
+                err
               </div>
 
               <div class="label">
@@ -162,48 +162,50 @@
             <h1 class="ui header" style="text-align: center; font-size: 40px;">FAQs</h1>
           </div>
 
-          <div class="ui raised segment faq">
-            <div class="ui medium header">Are tutoring sessions virtual or in person?</div>
-            <p>
-              Due to the ongoing COVID-19 pandemic, all tutoring sessions are currently being held virtually (via Zoom).
-            </p>
-          </div>
-
-          <div class="ui raised segment faq">
-            <div class="ui medium header">Are the tutoring sessions a one-time thing or recurring?</div>
-            <p>
-              They can be either! When you sign up, you can select whether you want to sign up for one session,
-              recurring
-              sessions, or if you are unsure!
-            </p>
-          </div>
-
-          <div class="ui raised segment faq">
-            <div class="ui medium header">Are the tutors paid or volunteers?</div>
-            <p>
-              All tutors are high school volunteers, but they all meet the rigorous standards Tremendous Tutors sets in
-              terms of academics and teaching experience.
-            </p>
-          </div>
-
-          <div class="ui raised segment faq">
-            <div class="ui medium header">I've signed up for tutoring! Now what?</div>
-            <p>
-              Your tutor will reach out to you shortly via email to coordinate a time that works for both of you for
-              your
-              session(s).
-            </p>
-          </div>
-
-          <div class="ui raised segment faq">
-            <div class="ui medium header">What subjects can you tutor in?</div>
-            <p>
-              On the sign-up form there is an extensive list of subjects available to choose from. If you need
-              assistance
-              in a subject not currently listed, you can manually input the subject into the "other" section, and we
-              will
-              try our best to accomodate you.
-            </p>
+          <div id="faqs">
+            <div class="ui raised segment faq">
+              <div class="ui medium header">Are tutoring sessions virtual or in person?</div>
+              <p>
+                Due to the ongoing COVID-19 pandemic, all tutoring sessions are currently being held virtually (via Zoom).
+              </p>
+            </div>
+  
+            <div class="ui raised segment faq">
+              <div class="ui medium header">Are the tutoring sessions a one-time thing or recurring?</div>
+              <p>
+                They can be either! When you sign up, you can select whether you want to sign up for one session,
+                recurring
+                sessions, or if you are unsure!
+              </p>
+            </div>
+  
+            <div class="ui raised segment faq">
+              <div class="ui medium header">Are the tutors paid or volunteers?</div>
+              <p>
+                All tutors are high school volunteers, but they all meet the rigorous standards Tremendous Tutors sets in
+                terms of academics and teaching experience.
+              </p>
+            </div>
+  
+            <div class="ui raised segment faq">
+              <div class="ui medium header">I've signed up for tutoring! Now what?</div>
+              <p>
+                Your tutor will reach out to you shortly via email to coordinate a time that works for both of you for
+                your
+                session(s).
+              </p>
+            </div>
+  
+            <div class="ui raised segment faq">
+              <div class="ui medium header">What subjects can you tutor in?</div>
+              <p>
+                On the sign-up form there is an extensive list of subjects available to choose from. If you need
+                assistance
+                in a subject not currently listed, you can manually input the subject into the "other" section, and we
+                will
+                try our best to accomodate you.
+              </p>
+            </div>
           </div>
 
         </div>
@@ -215,9 +217,8 @@
           </div>
 
           <div class="ui three stackable cards" id="tutorCards">
-
+            err
           </div>
-
 
         </div>
 
@@ -234,10 +235,10 @@
             </div>
             <div class="content">
               <div class="date">
-                3 days ago
+                err
               </div>
               <div class="summary">
-                You added <a>Jenny Hess</a> to your <a>coworker</a> group.
+                Feed looks <a>something</a> like <a>coworker</a> this.
               </div>
             </div>
           </div>
