--- a/client/index.html
+++ b/client/index.html
@@ -18,12 +18,12 @@
 
 <body>
   <div class="stickToTop">
-    <div class="vertical-center" style="height: 100px;">
+    <div class="vertical-center" style="height: 100px; color: #223d77">
       <h1 style="font-size: 60px;">
         Tremendous
       </h1>
     </div>
-    <div class="vertical-center" style="height: 100px; color: ;">
+    <div class="vertical-center" style="height: 100px; color: #223d77;">
       <h1 style="font-size: 60px;">
         Tutors
       </h1>
